fixed lagged toolbar jump + cleanup

--- a/extensions/system/assets/less/pagekit.less
+++ b/extensions/system/assets/less/pagekit.less
@@ -16,14 +16,10 @@
 
 }
 
-/* Modifier `pk-toolbar`
+/* Toolbar
 ========================================================================== */
 
-/*
- * Only if toolbar is inside a modal
- */
-
-.uk-modal .pk-toolbar {
+.pk-toolbar {
     margin-bottom: 20px;
     padding-bottom: 20px;
     border-bottom: 1px solid @global-border;
